ecostream-fortress-submission/ecostream-fortress/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecostream-app
  namespace: ecostream
  labels:
    app: ecostream-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecostream-app
  template:
    metadata:
      labels:
        app: ecostream-app
    spec:
      containers:
      - name: app
        image: REPLACE_ME_ECR_IMAGE:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet: { path: /health, port: 8080 }
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /health, port: 8080 }
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          requests: { cpu: "200m", memory: "256Mi" }
          limits:   { cpu: "500m", memory: "512Mi" }
