ecostream-fortress-submission/ecostream-fortress/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecostream-app-svc
  namespace: ecostream
spec:
  type: ClusterIP
  selector:
    app: ecostream-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
